import java.util.Objects;

public class Point {
    private final double x;
    private final double y;
    private static final double EPSILON = 0.000001;

    // Constructor
    public Point() {
        this(0.0, 0.0);
    }

    public Point(double x, double y) {
        this.x = x;
        this.y = y;
    }

    public double getX() { return x; }
    public double getY() { return y; }

    @Override
    public boolean equals(Object o) {
        if (this == o) return true;
        if (o == null || getClass() != o.getClass()) return false;
        Point point = (Point) o;
        return Math.abs(x - point.x) < EPSILON &&
               Math.abs(y - point.y) < EPSILON;
    }

    @Override
    public int hashCode() {
        return Objects.hash(x, y); // handles the epsilon logic
    }

    @Override
    public String toString() {
        return String.format("(%.2f,%.2f)", x, y);
    }
}